# io-conference-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_update.yml
data/archive/2026-03-12/: conferences.csv
data/archive/2026-03-13/: conferences.csv  conferences_deduped.csv  run_summary.json
data/archive/2026-03-14/: run_summary.json
data/archive/2026-03-17/: conferences.json
data/archive/2026-03-18/: run_summary.json
data/archive/2026-03-19/: conferences_deduped.csv  run_summary.json
data/archive/2026-03-20/: conferences.csv  conferences.json  conferences_deduped.csv  run_summary.json
data/archive/2026-03-21/: conferences.csv  conferences.json  conferences_deduped.csv
data/archive/2026-03-22/: conferences.csv  conferences_deduped.csv
data/archive/2026-03-23/: conferences.csv  (+2 more)
data/processed/: latest_conferences_deduped.csv  latest_run_summary.json
data/seeds/: organizations.csv
docs/: app.js  index.html  styles.css
docs/data/: latest_conferences.json  latest_run_summary.json
src/: config.py  constants.py  main.py  models.py
src/pipeline/: archive.py  extract.py  normalize.py  publish.py  summarize.py  validate.py
src/scrapers/: base.py  fao.py  generic_calendar.py  generic_events.py  generic_links.py  iaea.py  ilo.py  itu.py  oecd.py  registry.py  un_calendar.py  unesco.py  who.py  world_bank.py  wto.py
src/site/: build_site_data.py
src/utils/: date_utils.py  dedupe.py  http_utils.py  io_utils.py  logging_utils.py
tests/: test_dedupe.py  test_normalize.py  test_registry.py  test_schema.py
(+536 files in other folders)
